# generative-adversarial-networks-041

./: Assigment_4_Generative_Adversarial_Networks.ipynb  ENVIRONMENT_SETUP.md  Generative_Adversarial_Networks_Theorical_Qs.md  README.md  Theorical_Qs.ipynb  main.py  pyproject.toml
req/: requirements-dev.txt  requirements.txt
