[project]
name = "generative-adversarial-networks-041"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "debugpy>=1.8.20",
    "dill>=0.4.1",
    "duckdb>=1.4.4",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "mypy>=1.19.1",
    "pandas>=3.0.0",
    "polars>=1.38.0",
    "pre-commit>=4.5.1",
    "ptpython>=3.0.32",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
    "tensorflow-metal>=1.2.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
